add an ip address to the website

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "database": {
-        "host": "localhost",
+        "host": "198.57.242.148",
         "name": "ahmedsaa_rdatrainingcourse",
         "username": "ahmedsaa_rda",
         "password": "mDnl=NAy6({8"
